--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bitreq"
-version = "0.0.0"
-authors = ["Tobin C. Harding <me@tobin.cc>"]
+version = "0.1.0"
+authors = ["Jens Pitkanen <jens@neon.moe>", "Tobin C. Harding <me@tobin.cc>"]
 description = "Simple, minimal-dependency HTTP client"
 documentation = "https://docs.rs/bitreq"
 repository = "https://github.com/rust-bitcoin/corepc"
@@ -12,4 +12,58 @@ license = "ISC"
 edition = "2021"
 rust-version = "1.74.0"
 
+[badges]
+maintenance = { status = "experimental" }
+
 [dependencies]
+# For the urlencoding feature:
+urlencoding = { version = "2.1.0", optional = true }
+# For the punycode feature:
+punycode = { version = "0.4.1", optional = true }
+# For the proxy feature:
+base64 = { version = "0.22", optional = true }
+# For the https features:
+rustls = { version = "0.21.1", optional = true }
+rustls-native-certs = { version = "0.6.1", optional = true }
+webpki-roots = { version = "0.25.2", optional = true }
+rustls-webpki = { version = "0.101.0", optional = true }
+log = { version = "0.4.0", optional = true }
+# For the async feature:
+tokio = { version = "1.0", features = ["net", "time", "io-util", "rt", "rt-multi-thread", "macros"], optional = true }
+tokio-rustls = { version = "0.24", optional = true }
+
+[dev-dependencies]
+tiny_http = "0.12"
+chrono = "0.4.0"
+
+[package.metadata.docs.rs]
+features = ["proxy", "https", "punycode"]
+
+[features]
+default = ["std"]
+std = []
+log = ["dep:log"]
+https = ["https-rustls"]
+https-rustls = ["rustls", "webpki-roots", "rustls-webpki"]
+https-rustls-probe = ["rustls", "rustls-native-certs"]
+proxy = ["base64"]
+async = ["tokio", "std"]
+async-https = ["async", "https-rustls", "tokio-rustls"]
+
+[[example]]
+name = "hello"
+required-features = ["std"]
+
+[[example]]
+name = "iterator"
+required-features = ["std"]
+
+[[example]]
+name = "async_hello"
+required-features = ["async"]
+
+[lints.clippy]
+# Allow `format!("{}", x)`instead of enforcing `format!("{x}")`
+uninlined_format_args = "allow"
+
+# vim: ft=conf
