--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -20,6 +20,9 @@ maintenance = { status = "experimental" }
 urlencoding = { version = "2.1.0", optional = true }
 # For the punycode feature:
 punycode = { version = "0.4.1", optional = true }
+# For the json-using-serde feature:
+serde = { version = "1.0.101", optional = true }
+serde_json = { version = "1.0.0", optional = true }
 # For the proxy feature:
 base64 = { version = "0.22", optional = true }
 # For the https features:
@@ -37,7 +40,7 @@ tiny_http = "0.12"
 chrono = "0.4.0"
 
 [package.metadata.docs.rs]
-features = ["proxy", "https", "punycode"]
+features = ["json-using-serde", "proxy", "https", "punycode"]
 
 [features]
 default = ["std"]
@@ -46,6 +49,7 @@ log = ["dep:log"]
 https = ["https-rustls"]
 https-rustls = ["rustls", "webpki-roots", "rustls-webpki"]
 https-rustls-probe = ["rustls", "rustls-native-certs"]
+json-using-serde = ["serde", "serde_json"]
 proxy = ["base64"]
 async = ["tokio", "std"]
 async-https = ["async", "https-rustls", "tokio-rustls"]
