Depend on bitreq
We just forked `minreq` into this repository to create an HTTP crate
that is specifically designed to be used by Bitcoin projects. As such
we called it `bitreq`.

Depend on the local `bitreq` crate instead of `minreq`. Done directly
in `node` and `jsonrpc`. Indirectly in `client`, including rename of
a million macros that have `minreq` in the name.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -11,7 +11,7 @@ cargo-fuzz = true
 
 [dependencies]
 honggfuzz = { version = "0.5.55", default-features = false }
-jsonrpc = { path = "..", features = ["minreq_http"] }
+jsonrpc = { path = "..", features = ["bitreq_http"] }
 
 serde = { version = "1.0.103", features = [ "derive" ] }
 serde_json = "1.0"
@@ -20,8 +20,8 @@ serde_json = "1.0"
 unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
 
 [[bin]]
-name = "minreq_http"
-path = "fuzz_targets/minreq_http.rs"
+name = "bitreq_http"
+path = "fuzz_targets/bitreq_http.rs"
 
 [[bin]]
 name = "simple_http"
