--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -16,8 +16,6 @@ rust-version = "1.75.0"
 maintenance = { status = "experimental" }
 
 [dependencies]
-# For the punycode feature:
-punycode = { version = "0.4.1", optional = true }
 # For the json-using-serde feature:
 serde = { version = "1.0.101", optional = true }
 serde_json = { version = "1.0.0", optional = true }
@@ -38,7 +36,7 @@ tiny_http = "0.12"
 chrono = "0.4.0"
 
 [package.metadata.docs.rs]
-features = ["json-using-serde", "proxy", "https", "punycode"]
+features = ["json-using-serde", "proxy", "https"]
 
 [features]
 default = ["std"]
