--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -28,13 +28,13 @@ webpki-roots = { version = "0.25.2", optional = true }
 rustls-webpki = { version = "0.101.0", optional = true }
 log = { version = "0.4.0", optional = true }
 # For the async feature:
-tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "io-util"], optional = true }
+tokio = { version = "1.0", features = ["rt", "net", "io-util", "time"], optional = true }
 tokio-rustls = { version = "0.24", optional = true }
 
 [dev-dependencies]
 tiny_http = "0.12"
 chrono = "0.4.0"
-tokio = { version = "1.0", default-features = false, features = ["macros", "rt"] }
+tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "time"] }
 
 [package.metadata.docs.rs]
 features = ["json-using-serde", "proxy", "https"]
