--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -97,6 +97,8 @@ jobs:
     name: Lint - nightly toolchain
     needs: Prepare
     runs-on: ubuntu-latest
+    env:
+      BITCOIND_SKIP_DOWNLOAD: "1"
     strategy:
       fail-fast: false
       matrix:
@@ -127,6 +129,8 @@ jobs:
   Docs:
     name: Docs - stable toolchain
     runs-on: ubuntu-latest
+    env:
+      BITCOIND_SKIP_DOWNLOAD: "1"
     strategy:
       fail-fast: false
       matrix:
@@ -151,6 +155,8 @@ jobs:
     name: Docs - nightly toolchain
     needs: Prepare
     runs-on: ubuntu-latest
+    env:
+      BITCOIND_SKIP_DOWNLOAD: "1"
     strategy:
       fail-fast: false
       matrix:
