--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -28,7 +28,7 @@ webpki-roots = { version = "0.25.2", optional = true }
 rustls-webpki = { version = "0.101.0", optional = true }
 log = { version = "0.4.0", optional = true }
 # For the async feature:
-tokio = { version = "1.0", features = ["rt", "net", "io-util", "time"], optional = true }
+tokio = { version = "1.0", features = ["rt", "net", "io-util", "time", "sync"], optional = true }
 tokio-rustls = { version = "0.24", optional = true }
 
 [dev-dependencies]
