--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -34,7 +34,7 @@ tokio-rustls = { version = "0.24", optional = true }
 [dev-dependencies]
 tiny_http = "0.12"
 chrono = "0.4.0"
-tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "time"] }
+tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
 
 [package.metadata.docs.rs]
 features = ["json-using-serde", "proxy", "https"]
