--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -17,23 +17,22 @@ maintenance = { status = "experimental" }
 
 [dependencies]
 # For the json-using-serde feature:
-serde = { version = "1.0.101", optional = true }
-serde_json = { version = "1.0.0", optional = true }
+serde = { version = "1.0.101", default-features = false, optional = true }
+serde_json = { version = "1.0.0", default-features = false, features = ["std"], optional = true }
 # For the proxy feature:
-base64 = { version = "0.22", optional = true }
+base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
 # For the https features:
 rustls = { version = "0.21.1", optional = true }
 rustls-native-certs = { version = "0.6.1", optional = true }
 webpki-roots = { version = "0.25.2", optional = true }
 rustls-webpki = { version = "0.101.0", optional = true }
-log = { version = "0.4.0", optional = true }
+log = { version = "0.4.0", default-features = false, optional = true }
 # For the async feature:
-tokio = { version = "1.0", features = ["rt", "net", "io-util", "time", "sync"], optional = true }
-tokio-rustls = { version = "0.24", optional = true }
+tokio = { version = "1.0", default-features = false, features = ["rt", "net", "io-util", "time", "sync"], optional = true }
+tokio-rustls = { version = "0.24", default-features = false, optional = true }
 
 [dev-dependencies]
 tiny_http = "0.12"
-chrono = "0.4.0"
 tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
 
 [package.metadata.docs.rs]
