--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -22,10 +22,10 @@ serde_json = { version = "1.0.0", default-features = false, features = ["std"], 
 # For the proxy feature:
 base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
 # For the https features:
-rustls = { version = "0.21.1", optional = true }
-rustls-native-certs = { version = "0.6.1", optional = true }
-webpki-roots = { version = "0.25.2", optional = true }
-rustls-webpki = { version = "0.101.0", optional = true }
+rustls = { version = "0.21.1", default-features = false, optional = true }
+rustls-native-certs = { version = "0.6.1", default-features = false, optional = true }
+webpki-roots = { version = "0.25.2", default-features = false, optional = true }
+rustls-webpki = { version = "0.101.0", default-features = false, optional = true }
 log = { version = "0.4.0", default-features = false, optional = true }
 # For the async feature:
 tokio = { version = "1.0", default-features = false, features = ["rt", "net", "io-util", "time", "sync"], optional = true }
@@ -48,7 +48,9 @@ https-rustls-probe = ["rustls", "rustls-native-certs"]
 json-using-serde = ["serde", "serde_json"]
 proxy = ["base64", "std"]
 async = ["tokio", "std"]
-async-https = ["async", "https-rustls", "tokio-rustls"]
+async-https = ["async-https-rustls"]
+async-https-rustls = ["async", "https-rustls", "tokio-rustls"]
+async-https-rustls-probe = ["async", "https-rustls-probe", "tokio-rustls"]
 
 [[example]]
 name = "hello"
