--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -19,17 +19,25 @@ maintenance = { status = "experimental" }
 # For the json-using-serde feature:
 serde = { version = "1.0.101", default-features = false, optional = true }
 serde_json = { version = "1.0.0", default-features = false, features = ["std"], optional = true }
+
 # For the proxy feature:
 base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
-# For the https features:
+
+# For rustls-based TLS:
 rustls = { version = "0.21.1", default-features = false, optional = true }
 rustls-native-certs = { version = "0.6.1", default-features = false, optional = true }
 webpki-roots = { version = "0.25.2", default-features = false, optional = true }
 rustls-webpki = { version = "0.101.0", default-features = false, optional = true }
-log = { version = "0.4.0", default-features = false, optional = true }
+
+# For native-tls-based TLS:
+native-tls = { version = "0.2", default-features = false, optional = true }
+
 # For the async feature:
 tokio = { version = "1.0", default-features = false, features = ["rt", "net", "io-util", "time", "sync"], optional = true }
 tokio-rustls = { version = "0.24", default-features = false, optional = true }
+tokio-native-tls = { version = "0.3", default-features = false, optional = true }
+
+log = { version = "0.4.0", default-features = false, optional = true }
 
 [dev-dependencies]
 tiny_http = "0.12"
@@ -41,16 +49,21 @@ features = ["json-using-serde", "proxy", "https"]
 [features]
 default = ["std"]
 std = []
+
 log = ["dep:log"]
+json-using-serde = ["serde", "serde_json"]
+proxy = ["base64", "std"]
+
 https = ["https-rustls"]
 https-rustls = ["rustls", "webpki-roots", "rustls-webpki"]
 https-rustls-probe = ["rustls", "rustls-native-certs"]
-json-using-serde = ["serde", "serde_json"]
-proxy = ["base64", "std"]
+https-native-tls = ["native-tls"]
+
 async = ["tokio", "std"]
 async-https = ["async-https-rustls"]
 async-https-rustls = ["async", "https-rustls", "tokio-rustls"]
 async-https-rustls-probe = ["async", "https-rustls-probe", "tokio-rustls"]
+async-https-native-tls = ["async", "https-native-tls", "tokio-native-tls"]
 
 [[example]]
 name = "hello"
