--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -13,6 +13,8 @@ edition = "2021"
 [features]
 download = ["node/download"]
 
+latest = ["30_0"]
+
 # Enable the same feature in `node` and the version feature here.
 # All minor releases of the latest four versions.
 30_0 = ["v30_and_below", "node/30_0"]
