--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -44,7 +44,7 @@ tiny_http = "0.12"
 tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
 
 [package.metadata.docs.rs]
-features = ["json-using-serde", "proxy", "https"]
+all-features = true
 
 [features]
 default = ["std"]
