--- a/bitreq/Cargo.toml
+++ b/bitreq/Cargo.toml
@@ -42,6 +42,8 @@ log = { version = "0.4.0", default-features = false, optional = true }
 [dev-dependencies]
 tiny_http = "0.12"
 tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
+proptest = { version = "1", default-features = false, features = ["std"] }
+url = { version = "2.4" }
 
 [package.metadata.docs.rs]
 features = ["json-using-serde", "proxy", "https"]
