ci: use ubuntu-slim for label & prepare ci tasks
The `ubuntu-slim` 1vCPU runners were recently introduced and seem to be the right fit here.

https://github.blog/changelog/2026-01-22-1-vcpu-linux-runner-now-generally-available-in-github-actions/

https://docs.github.com/en/actions/reference/runners/github-hosted-runners#single-cpu-runners

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -10,7 +10,7 @@ name: Continuous integration
 
 jobs:
   Prepare:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     outputs:
       nightly_version: ${{ steps.read_toolchain.outputs.nightly_version }}
     steps:
